--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"@mantine/core": "^5.10.5",
 		"@mantine/hooks": "^5.10.5",
 		"@next/font": "13.1.2",
+		"@react-pdf-viewer/core": "^3.12.0",
+		"@react-pdf-viewer/toolbar": "^3.12.0",
 		"@react-pdf/renderer": "^3.4.4",
 		"@reduxjs/toolkit": "^1.9.1",
 		"@tippyjs/react": "^4.2.6",
@@ -33,6 +35,7 @@
 		"@yworks/react-yfiles-orgchart": "^1.0.0",
 		"apexcharts": "^3.37.1",
 		"axios": "^1.6.5",
+		"core-js": "^3.38.0",
 		"dayjs": "^1.11.10",
 		"dotenv": "^16.4.4",
 		"easymde": "^2.18.0",
@@ -65,6 +68,7 @@
 		"react-infinite-scroll-component": "^6.1.0",
 		"react-organizational-chart": "^2.2.1",
 		"react-orgchart": "^1.0.5",
+		"react-pdf": "^9.1.0",
 		"react-perfect-scrollbar": "^1.5.8",
 		"react-popper": "^2.3.0",
 		"react-quill": "^2.0.0",
