--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"moment-timezone": "^0.5.43",
 		"next": "^14.1.3",
 		"ni18n": "^1.0.5",
+		"pdfjs-dist": "2.4.456",
 		"rc-tree-select": "^5.18.0",
 		"react": "18.2.0",
 		"react-18-image-lightbox": "^5.1.4",
@@ -62,6 +63,7 @@
 		"react-dom": "18.2.0",
 		"react-dropdown-tree-select": "^2.8.0",
 		"react-export-table-to-excel": "^1.0.6",
+		"react-file-viewer": "^1.2.1",
 		"react-flatpickr": "^3.10.13",
 		"react-i18next": "^12.1.5",
 		"react-images-uploading": "^3.1.7",
