--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@react-pdf/renderer": "^3.4.4",
 		"@reduxjs/toolkit": "^1.9.1",
 		"@tippyjs/react": "^4.2.6",
+		"@types/file-saver": "^2.0.7",
 		"@types/node": "18.17.0",
 		"@types/react": "18.0.27",
 		"@types/react-dom": "18.0.10",
@@ -41,6 +42,7 @@
 		"easymde": "^2.18.0",
 		"eslint": "8.32.0",
 		"eslint-config-next": "13.1.2",
+		"file-saver": "^2.0.5",
 		"formik": "^2.4.6",
 		"fs": "^0.0.1-security",
 		"highlight.js": "^11.7.0",
