--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@tippyjs/react": "^4.2.6",
 		"@types/file-saver": "^2.0.7",
 		"@types/node": "18.17.0",
+		"@types/pdfjs-dist": "^2.10.378",
 		"@types/react": "18.0.27",
 		"@types/react-dom": "18.0.10",
 		"@x1mrdonut1x/nouislider-react": "^3.4.3",
